apps/base/zeptoclaw/resources/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    linkerd.io/inject: enabled
  labels:
    pod-security.kubernetes.io/enforce: privileged # for linkerd-init
    pod-security.kubernetes.io/warn: restricted
  name: claw
