apps/base/zeptoclaw/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: zeptoclaw
    app.kubernetes.io/instance: claw
    app.kubernetes.io/name: zeptoclaw
  name: zeptoclaw
  namespace: claw
spec:
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 9090
  selector:
    app.kubernetes.io/component: zeptoclaw
    app.kubernetes.io/instance: claw
    app.kubernetes.io/name: zeptoclaw
  type: ClusterIP
