apps/base/zeptoclaw/resources/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/instance: claw
    app.kubernetes.io/name: zeptoclaw
  name: zeptoclaw
  namespace: claw
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
  podSelector:
    matchLabels:
      app.kubernetes.io/component: zeptoclaw
      app.kubernetes.io/instance: claw
      app.kubernetes.io/name: zeptoclaw
  policyTypes:
    - Ingress
